@@ -14,12 +14,14 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.CompilerModuleExtension;
 import com.intellij.openapi.roots.CompilerProjectExtension;
 import com.intellij.openapi.vfs.VfsUtilCore;
-import com.intellij.util.ObjectUtils;
 import com.intellij.util.SmartList;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.gradle.model.data.BuildScriptClasspathData;
-import org.jetbrains.plugins.gradle.properties.GradleDaemonJvmPropertiesFileKt;
+import org.jetbrains.plugins.gradle.properties.GradleDaemonJvmPropertiesFile;
+import org.jetbrains.plugins.gradle.properties.GradleLocalPropertiesFile;
+import org.jetbrains.plugins.gradle.properties.GradlePropertiesFile;
 import org.jetbrains.plugins.gradle.service.execution.GradleUserHomeUtil;
 import org.jetbrains.plugins.gradle.settings.DistributionType;
 import org.jetbrains.plugins.gradle.settings.GradleProjectSettings;
@@ -31,7 +33,6 @@ import java.io.IOException;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class GradleAutoImportAware implements ExternalSystemAutoImportAware {
@@ -102,81 +103,67 @@ public class GradleAutoImportAware implements ExternalSystemAutoImportAware {
 
   @Override
   public @NotNull List<File> getAffectedExternalProjectFiles(@NotNull String externalProjectPath, @NotNull Project project) {
-    GradleSettings settings = GradleSettings.getInstance(project);
-    GradleProjectSettings projectSettings = settings.getLinkedProjectSettings(externalProjectPath);
+    var settings = GradleSettings.getInstance(project);
+    var projectSettings = settings.getLinkedProjectSettings(externalProjectPath);
     if (projectSettings == null) {
       return Collections.emptyList();
     }
-    return GradleAutoReloadSettingsCollector.EP_NAME.getExtensionList().stream()
-      .flatMap(it -> it.collectSettingsFiles(project, projectSettings).stream())
-      .collect(Collectors.toList());
+    var result = new SmartList<File>();
+    GradleAutoReloadSettingsCollector.EP_NAME.forEachExtensionSafe(extension -> {
+      var settingsFiles = extension.collectSettingsFiles(project, projectSettings);
+      result.addAll(ContainerUtil.map(settingsFiles, it -> it.toFile()));
+    });
+    return result;
   }
 
   public static final class GradlePropertiesCollector implements GradleAutoReloadSettingsCollector {
 
     @Override
-    public @NotNull List<File> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
-      String gradleUserHome = ObjectUtils.chooseNotNull(
-        GradleSettings.getInstance(project).getServiceDirectoryPath(),
-        GradleUserHomeUtil.gradleUserHomeDir().getPath()
-      );
-      String externalProjectPath = projectSettings.getExternalProjectPath();
-
-      List<File> files = new SmartList<>();
-      files.add(new File(gradleUserHome, "gradle.properties"));
-      files.add(new File(gradleUserHome, "init.gradle"));
-      files.add(new File(externalProjectPath, "gradle.properties"));
-      return files;
+    public @NotNull List<Path> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
+      Path projectPath = Path.of(projectSettings.getExternalProjectPath());
+      List<Path> paths = new SmartList<>();
+      paths.addAll(GradlePropertiesFile.getPropertyPaths(project, projectPath));
+      paths.add(GradleLocalPropertiesFile.getPropertyPath(projectPath));
+      paths.add(GradleDaemonJvmPropertiesFile.getPropertyPath(projectPath));
+      paths.add(GradleUserHomeUtil.gradleUserHomeDir().toPath().resolve("init.gradle"));
+      return paths;
     }
   }
 
   public static final class VersionCatalogCollector implements GradleAutoReloadSettingsCollector {
 
     @Override
-    public @NotNull List<File> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
-      String externalProjectPath = projectSettings.getExternalProjectPath();
-
-      List<File> files = new SmartList<>();
-      var node = ExternalSystemApiUtil.findProjectNode(project, GradleConstants.SYSTEM_ID, externalProjectPath);
-      if (node != null) {
-        var versionCatalog = ExternalSystemApiUtil.find(node, BuildScriptClasspathData.VERSION_CATALOGS);
-        if (versionCatalog != null) {
-          for (String catalogFile : versionCatalog.getData().getCatalogsLocations().values()) {
-            files.add(new File(catalogFile));
-          }
-        }
+    public @NotNull List<Path> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
+      var externalProjectPath = projectSettings.getExternalProjectPath();
+      var projectNode = ExternalSystemApiUtil.findProjectNode(project, GradleConstants.SYSTEM_ID, externalProjectPath);
+      if (projectNode == null) {
+        return Collections.emptyList();
       }
-      return files;
+      var versionCatalogNode = ExternalSystemApiUtil.find(projectNode, BuildScriptClasspathData.VERSION_CATALOGS);
+      if (versionCatalogNode == null) {
+        return Collections.emptyList();
+      }
+      var versionCatalogPaths = versionCatalogNode.getData().getCatalogsLocations();
+      return ContainerUtil.map(versionCatalogPaths.values(), it -> Path.of(it));
     }
   }
 
   public static final class WrapperConfigCollector implements GradleAutoReloadSettingsCollector {
     @Override
-    public @NotNull List<File> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
-      String externalProjectPath = projectSettings.getExternalProjectPath();
-
-      List<File> files = new SmartList<>();
+    public @NotNull List<Path> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
       if (projectSettings.getDistributionType() == DistributionType.DEFAULT_WRAPPED) {
-        files.add(new File(externalProjectPath, "gradle/wrapper/gradle-wrapper.properties"));
+        Path projectPath = Path.of(projectSettings.getExternalProjectPath());
+        return Collections.singletonList(projectPath.resolve("gradle/wrapper/gradle-wrapper.properties"));
       }
-      return files;
-    }
-  }
-
-  public static final class GradleDaemonJvmPropertiesCollector implements GradleAutoReloadSettingsCollector {
-    @NotNull
-    @Override
-    public List<File> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
-      String externalProjectPath = projectSettings.getExternalProjectPath();
-      return List.of(new File(externalProjectPath, "gradle/" + GradleDaemonJvmPropertiesFileKt.GRADLE_DAEMON_JVM_PROPERTIES_FILE_NAME));
+      return Collections.emptyList();
     }
   }
 
   public static final class GradleScriptCollector implements GradleAutoReloadSettingsCollector {
 
     @Override
-    public @NotNull List<File> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
-      List<File> files = new SmartList<>();
+    public @NotNull List<Path> collectSettingsFiles(@NotNull Project project, @NotNull GradleProjectSettings projectSettings) {
+      List<Path> paths = new SmartList<>();
 
       for (String modulePath : projectSettings.getModules()) {
         ProgressManager.checkCanceled();
@@ -188,8 +175,9 @@ public class GradleAutoImportAware implements ExternalSystemAutoImportAware {
               String fileName = path.getFileName().toString();
               if (fileName.endsWith('.' + GradleConstants.EXTENSION) ||
                   fileName.endsWith('.' + GradleConstants.KOTLIN_DSL_SCRIPT_EXTENSION)) {
-                File file = path.toFile();
-                if (file.isFile()) files.add(file);
+                if (Files.isRegularFile(path)) {
+                  paths.add(path);
+                }
               }
               return FileVisitResult.CONTINUE;
             }
@@ -200,7 +188,7 @@ public class GradleAutoImportAware implements ExternalSystemAutoImportAware {
         }
       }
 
-      return files;
+      return paths;
     }
   }
 
